--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li><a href="/">Weeks Plan</a></li>
+						<li><a href="{{url_for('weekly')}}">Weeks Plan</a></li>
 						<li><a href="/">Calories</a></li>
 						<li><a href="{{url_for('recipe')}}">Recipes</a></li>
 						<li><a href="/">Pantry Organiser</a></li>
